--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-# Logs
-logs
-*.log
+# Node / JS
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Builds
+dist/
+.next/
+out/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Env
+.env
+.env.*
+.env.local
+.env.*.local
+
+# IDE / Editor
+.idea/
+.vscode/
+*.swp
+
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Vite
+.vite/
+
+# Misc
+coverage/
+*.tsbuildinfo
